--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "geist": "^1.0.0",
     "lucide-react": "^0.294.0",
     "next": "latest",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.29",
-    "react": "18.2.0",
+    "react": "latest",
     "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
+    "react-dom": "latest",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
@@ -43,7 +44,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
