--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "date-fns": "^3.3.1",
     "geist": "^1.0.0",
     "lucide-react": "^0.294.0",
+    "meta-fetcher": "^3.1.1",
+    "mobx": "^6.12.0",
+    "mobx-react": "^9.1.0",
     "next": "latest",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.29",
