--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.3",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
