--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@usebasejump/shared": "latest",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.7",
+    "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
+    "formidable": "^3.5.1",
     "geist": "^1.0.0",
     "lucide-react": "^0.294.0",
     "meta-fetcher": "^3.1.1",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
+    "multer": "^1.4.5-lts.1",
     "next": "latest",
     "node-fetch": "^3.3.2",
     "postcss": "8.4.29",
