--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.12.0",
+    "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@usebasejump/next": "latest",
     "@usebasejump/react": "latest",
     "@usebasejump/shared": "latest",
@@ -32,6 +36,7 @@
     "date-fns": "^3.3.1",
     "formidable": "^3.5.1",
     "geist": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
     "meta-fetcher": "^3.1.1",
     "mobx": "^6.12.0",
